frontend/css/dailyleetcode_page.css
@import url(main.css);

h1 {
  color: var(--color-highlight)
}

p {
  line-height: 1.6;
}

button {
  border-radius: 8px;
  border: 3px solid var(--color-highlight);
  padding: 0.5em;
}

button:hover {
  border: 3px solid var(--color-text-light);
}

button:active {
  background-color: var(--color-highlight-dark);
}

.leetcode-title {
  padding-left: 2em;
}

.leetcode-post-container {
  text-align: center;
  align-items: center;
}

.leetcode-solution {
  background-color: var(--color-bg-light);
  color: var(--color-text-light);
  border-radius: 15px;
  box-shadow: none !important;
}

.leetcode-solution * {
  background-color: var(--color-bg-light);
  text-shadow: none !important;
}

